[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "game_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-program = "=2.2.1"
solana-instruction = "=2.2.1"
switchboard-on-demand = { version = "0.10.0", features = ["anchor"] }
